--- a/RedBox/packages.config
+++ b/RedBox/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Angular.UI.Bootstrap" version="1.0.3" targetFramework="net45" />
   <package id="angularjs" version="1.4.8" targetFramework="net45" />
+  <package id="AngularJS.Aria" version="1.4.8" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.4.8" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.4.8" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
