add services files

--- a/RedBox/RedBox.Web.csproj
+++ b/RedBox/RedBox.Web.csproj
@@ -235,6 +235,8 @@
     <Content Include="app\services\appRouter.js" />
     <Content Include="app\services\authentification.js" />
     <Content Include="app\services\authInterceptorService.js" />
+    <Content Include="app\services\eomService.js" />
+    <Content Include="app\services\suggestionService.js" />
     <Content Include="app\views\Apprentice.html" />
     <Content Include="app\views\ApprenticeDetail.html" />
     <Content Include="app\views\EOM.html" />
