--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=www2.techromix.com;Initial Catalog=RedBox;user id=techromix;password=techromix;" providerName="System.Data.SqlClient" />
+    <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www2.techromix.com;initial catalog=RedBox;user id=techromix;password=techromix;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
