--- a/RedBox/packages.config
+++ b/RedBox/packages.config
@@ -7,6 +7,7 @@
   <package id="AngularJS.Route" version="1.4.8" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="jQuery" version="2.2.0" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
@@ -39,5 +40,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="underscore.js" version="1.8.2" targetFramework="net45" />
+  <package id="Unity" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
