--- a/RedBox.DataAccess/RedBox.DataAccess.csproj
+++ b/RedBox.DataAccess/RedBox.DataAccess.csproj
@@ -76,6 +76,9 @@
     <Compile Include="EOMVote.cs">
       <DependentUpon>RedBoxModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Event.cs">
+      <DependentUpon>RedBoxModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedBoxModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -98,6 +101,9 @@
       <DependentUpon>RedBoxModel.tt</DependentUpon>
     </Compile>
     <Compile Include="SuggestionVote.cs">
+      <DependentUpon>RedBoxModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserEvent.cs">
       <DependentUpon>RedBoxModel.tt</DependentUpon>
     </Compile>
     <Compile Include="UserInfo.cs">
