--- a/RedBox.Services/RedBox.Services.csproj
+++ b/RedBox.Services/RedBox.Services.csproj
@@ -39,7 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EOMService\EomHistoryResponse.cs" />
     <Compile Include="EOMService\EOMService.cs" />
+    <Compile Include="EOMService\EomVoteRequest.cs" />
     <Compile Include="EOMService\IEOMService.cs" />
     <Compile Include="Models\EOMModel.cs" />
     <Compile Include="Models\EOMUserVotesModel.cs" />
