--- a/RedBox.Services/RedBox.Services.csproj
+++ b/RedBox.Services/RedBox.Services.csproj
@@ -30,8 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +50,7 @@
     <Compile Include="Models\EOMVotesModel.cs" />
     <Compile Include="Models\EventModel.cs" />
     <Compile Include="Models\EventResponse.cs" />
+    <Compile Include="Models\RespondToEventRequest.cs" />
     <Compile Include="Models\SuggestionModel.cs" />
     <Compile Include="Models\SuggestionVoteModel.cs" />
     <Compile Include="Models\UserEventModel.cs" />
