--- a/RedBox/RedBox.Web.csproj
+++ b/RedBox/RedBox.Web.csproj
@@ -244,6 +244,7 @@
     <Content Include="app\controllers\apprenticeDetailController.js" />
     <Content Include="app\controllers\eomController.js" />
     <Content Include="app\controllers\evaluationController.js" />
+    <Content Include="app\controllers\eventsController.js" />
     <Content Include="app\controllers\feedbackToPeersController.js" />
     <Content Include="app\controllers\giveFeedbackController.js" />
     <Content Include="app\controllers\suggestionsController.js" />
@@ -258,11 +259,13 @@
     <Content Include="app\services\authentification.js" />
     <Content Include="app\services\authInterceptorService.js" />
     <Content Include="app\services\eomService.js" />
+    <Content Include="app\services\eventService.js" />
     <Content Include="app\services\suggestionService.js" />
     <Content Include="app\services\userService.js" />
     <Content Include="app\views\Apprentice.html" />
     <Content Include="app\views\ApprenticeDetail.html" />
     <Content Include="app\views\EOM.html" />
+    <Content Include="app\views\Events.html" />
     <Content Include="app\views\FeedBack.html" />
     <Content Include="app\views\GiveFeedback.html" />
     <Content Include="app\views\Login.html" />
