--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -12,7 +12,9 @@
     <add name="DefaultConnection" connectionString="Data Source=www2.techromix.com;Initial Catalog=RedBox;user id=techromix;password=techromix;" providerName="System.Data.SqlClient" />
     <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www2.techromix.com;initial catalog=RedBox;user id=techromix;password=techromix;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="ssoBaseUrl" value="http://localhost:58902/"/>
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
