--- a/RedBox/RedBox.Web.csproj
+++ b/RedBox/RedBox.Web.csproj
@@ -333,6 +333,7 @@
     <Content Include="Scripts\angular-sanitize.min.js.map" />
     <Content Include="Scripts\angular-touch.min.js.map" />
     <Content Include="Scripts\angular.min.js.map" />
+    <None Include="Properties\PublishProfiles\RedBox.pubxml" />
     <None Include="Scripts\jquery-2.2.0.intellisense.js" />
     <Content Include="Index.html" />
     <Content Include="Scripts\angular-animate.js" />
