--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -13,7 +13,7 @@
     <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www2.techromix.com;initial catalog=RedBox;user id=techromix;password=techromix;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ssoBaseUrl" value="http://localhost:58902/"/>
+    <add key="ssoBaseUrl" value="http://www2.techromix.com:85/"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
