--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -9,11 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=www2.techromix.com;Initial Catalog=RedBox;user id=techromix;password=techromix;" providerName="System.Data.SqlClient" />
-    <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www2.techromix.com;initial catalog=RedBox;user id=techromix;password=techromix;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=192.168.1.156\TMX_SQL_2014;Initial Catalog=RedBoxTesting;user id=techromix;password=Tech_romix!;" providerName="System.Data.SqlClient" />
+    <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.156\TMX_SQL_2014;initial catalog=RedBoxTesting;user id=techromix;password=Tech_romix!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ssoBaseUrl" value="http://localhost:2016/"/>
+    <add key="ssoBaseUrl" value="http://localhost:2016/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
