--- a/RedBox/packages.config
+++ b/RedBox/packages.config
@@ -5,6 +5,7 @@
   <package id="AngularJS.Aria" version="1.4.8" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.4.8" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.4.8" targetFramework="net45" />
+  <package id="angular-toastr" version="1.6.0" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
