--- a/RedBox.DataAccess/App.Config
+++ b/RedBox.DataAccess/App.Config
@@ -5,8 +5,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-  <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=www2.techromix.com;initial catalog=RedBox;user id=techromix;password=techromix;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
+    <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.156\TMX_SQL_2014;initial catalog=RedBoxTesting;user id=techromix;password=Tech_romix!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
