--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -13,7 +13,7 @@
     <add name="RedBoxEntities" connectionString="metadata=res://*/RedBoxModel.csdl|res://*/RedBoxModel.ssdl|res://*/RedBoxModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.1.156\TMX_SQL_2014;initial catalog=RedBoxTesting;user id=techromix;password=Tech_romix!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
-    <add key="ssoBaseUrl" value="http://localhost:2016/" />
+    <add key="ssoBaseUrl" value="http://timesheet.techromix.com/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
