--- a/RedBox/packages.config
+++ b/RedBox/packages.config
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Angular.UI.Bootstrap" version="1.0.3" targetFramework="net45" />
-  <package id="angularjs" version="1.4.8" targetFramework="net45" />
-  <package id="AngularJS.Aria" version="1.4.8" targetFramework="net45" />
-  <package id="AngularJS.Core" version="1.4.8" targetFramework="net45" />
-  <package id="AngularJS.Route" version="1.4.8" targetFramework="net45" />
+  <package id="Angular.Material" version="1.0.5" targetFramework="net45" />
+  <package id="Angular.UI.Bootstrap" version="1.2.1" targetFramework="net45" />
+  <package id="angularjs" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Aria" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Messages" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.5.0" targetFramework="net45" />
   <package id="angular-toastr" version="1.6.0" targetFramework="net45" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="2.2.0" targetFramework="net45" />
+  <package id="FontAwesome" version="4.4.0" targetFramework="net45" />
+  <package id="jQuery" version="2.2.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
@@ -40,7 +43,7 @@
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
-  <package id="underscore.js" version="1.8.2" targetFramework="net45" />
+  <package id="underscore.js" version="1.8.3" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
