--- a/RedBox/app/.eslintrc
+++ b/RedBox/app/.eslintrc
@@ -7,5 +7,11 @@
         "_": true,
         "$": true
     },
-    "extends": "eslint:recommended"
+    "extends": ["eslint:recommended", "airbnb/legacy"],
+
+    "rules" : {
+        "no-param-reassign": [2, {"props": false}],
+        "func-names":0,
+        "vars-on-top":0
+      }
 }
