--- a/RedBox/Web.config
+++ b/RedBox/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation  targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.webServer>
@@ -44,7 +44,7 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35"/>
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
-      </dependentAssembly>
+      </dependentAssembly>\
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35"/>
         <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
